Added link to my GitHub project

--- a/index.html
+++ b/index.html
@@ -123,7 +123,15 @@
         </div>
       </div>
       <footer>
-        <div class="signature">Coded by Helen Voznyuk</div>
+        <div class="signature">
+          <a
+            href="https://github.com/helenvoznyuk/my-weather-app-shecodes-plus-course"
+            id="my-github-project"
+            target="”_blank”"
+            >Open-source code</a
+          >
+          by Helen Voznyuk
+        </div>
       </footer>
     </div>
 
