--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             style="width: 400px; padding-top: 7px"
           >
             <div class="card-body">
-              <h1 id="entered-location">Kyiv</h1>
+              <h1 id="entered-location"></h1>
               <span class="current-date" id="current-date"></span>
               <div class="card temperature-block" style="width: 325px">
                 <div
@@ -83,13 +83,14 @@
                   <div class="row">
                     <div class="col-6">
                       <img
-                        src="http://openweathermap.org/img/wn/11d@2x.png"
+                        src="http://openweathermap.org/img/wn/03n@2x.png"
                         id="icon"
                       />
 
-                      <span class="weather-condition" id="weather-condition"
-                        >Thunderstorm</span
-                      >
+                      <span
+                        class="weather-condition"
+                        id="weather-condition"
+                      ></span>
                     </div>
                     <div class="col-6">
                       <span id="main-temperature"></span>
