Forecast: added min/max temp. + Google Maps API draft

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <div class="card-body">
               <h1 id="entered-location"></h1>
               <span class="current-date" id="current-date"></span>
+
               <div class="card temperature-block" style="width: 325px">
                 <div
                   class="card-body"
@@ -120,35 +121,40 @@
               <div class="card-body">
                 <span class="monday">Monday</span>
                 <i class="fa-solid fa-cloud-sun icon-cloud-sun"></i>
-                <span class="temperature-monday">21°C</span>
+                <span class="temp-max temperature-monday">21° |</span>
+                <span class="temp-min temperature-monday">9°</span>
               </div>
             </div>
             <div class="card day-two" style="width: 150px">
               <div class="card-body">
                 <span class="tuesday">Tuesday</span>
                 <i class="fa-solid fa-sun icon-sun"></i>
-                <span class="temperature-tuesday">25°C</span>
+                <span class="temp-max temperature-tuesday">25° |</span>
+                <span class="temp-min temperature-tuesday">11°</span>
               </div>
             </div>
             <div class="card day-tree" style="width: 150px">
               <div class="card-body">
                 <span class="wednesday">Wednesday</span>
                 <i class="fa-solid fa-cloud icon-cloud"></i>
-                <span class="temperature-wednesday">19°C</span>
+                <span class="temp-max temperature-wednesday">19° |</span
+                ><span class="temp-min temperature-wednesday">14°</span>
               </div>
             </div>
             <div class="card day-four" style="width: 150px">
               <div class="card-body">
                 <span class="thursday">Thursday</span>
                 <i class="fa-solid fa-cloud-rain icon-cloud-rain"></i>
-                <span class="temperature-thursday">11°C</span>
+                <span class="temp-max temperature-thursday">11° |</span>
+                <span class="temp-min temperature-thursday">5°</span>
               </div>
             </div>
             <div class="card day-five" style="width: 150px">
               <div class="card-body">
                 <span class="friday">Friday</span>
                 <i class="fa-solid fa-cloud-sun-rain icon-cloud-sun-rain"></i>
-                <span class="temperature-friday">14°C</span>
+                <span class="temp-max temperature-friday">14° |</span>
+                <span class="temp-min temperature-friday">3°</span>
               </div>
             </div>
           </div>
