Refactoring: cleaned forecast display - created JS loop to populate HTML blocks

--- a/index.html
+++ b/index.html
@@ -114,8 +114,12 @@
         </div>
       </div>
 
-      <div class="card border-secondary mb-3 days-card" style="width: 820px">
-        <div class="card-body">
+      <div
+        class="card border-secondary mb-3 days-card"
+        id="forecast"
+        style="width: 820px"
+      >
+        <!-- <div class="card-body">
           <div class="row">
             <div class="card day-one" style="width: 150px">
               <div class="card-body">
@@ -158,7 +162,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <footer>
         <div class="signature">
