Completed forecast (design+functionality), fixed Search button positioning

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="card-body">
               <form id="city-input-form">
                 <div class="row">
-                  <div class="col-9">
+                  <div class="col-8">
                     <input
                       type="text"
                       placeholder="Enter a city"
@@ -42,7 +42,7 @@
                       autocomplete="off"
                     />
                   </div>
-                  <div class="col-3">
+                  <div class="col-4">
                     <input
                       type="submit"
                       value="Search"
@@ -118,52 +118,7 @@
         class="card border-secondary mb-3 days-card"
         id="forecast"
         style="width: 820px"
-      >
-        <!-- <div class="card-body">
-          <div class="row">
-            <div class="card day-one" style="width: 150px">
-              <div class="card-body">
-                <span class="monday">Monday</span>
-                <i class="fa-solid fa-cloud-sun icon-cloud-sun"></i>
-                <span class="temp-max temperature-monday">21° |</span>
-                <span class="temp-min temperature-monday">9°</span>
-              </div>
-            </div>
-            <div class="card day-two" style="width: 150px">
-              <div class="card-body">
-                <span class="tuesday">Tuesday</span>
-                <i class="fa-solid fa-sun icon-sun"></i>
-                <span class="temp-max temperature-tuesday">25° |</span>
-                <span class="temp-min temperature-tuesday">11°</span>
-              </div>
-            </div>
-            <div class="card day-tree" style="width: 150px">
-              <div class="card-body">
-                <span class="wednesday">Wednesday</span>
-                <i class="fa-solid fa-cloud icon-cloud"></i>
-                <span class="temp-max temperature-wednesday">19° |</span
-                ><span class="temp-min temperature-wednesday">14°</span>
-              </div>
-            </div>
-            <div class="card day-four" style="width: 150px">
-              <div class="card-body">
-                <span class="thursday">Thursday</span>
-                <i class="fa-solid fa-cloud-rain icon-cloud-rain"></i>
-                <span class="temp-max temperature-thursday">11° |</span>
-                <span class="temp-min temperature-thursday">5°</span>
-              </div>
-            </div>
-            <div class="card day-five" style="width: 150px">
-              <div class="card-body">
-                <span class="friday">Friday</span>
-                <i class="fa-solid fa-cloud-sun-rain icon-cloud-sun-rain"></i>
-                <span class="temp-max temperature-friday">14° |</span>
-                <span class="temp-min temperature-friday">3°</span>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
+      ></div>
       <footer>
         <div class="signature">
           <a
