--- a/index.html
+++ b/index.html
@@ -69,16 +69,18 @@
           >
             <div class="card-body">
               <h1 id="entered-location"></h1>
-              <span class="current-date" id="current-date"></span>
+              <div class="wrap-date">
+                <span class="current-date" id="current-date"></span>
+              </div>
 
               <div class="card temperature-block" style="width: 325px">
                 <div
                   class="card-body"
                   style="
-                    padding-top: 8px;
+                    padding-top: 0px;
                     padding-left: 10px;
                     padding-right: 15px;
-                    padding-bottom: 20px;
+                    padding-bottom: 15px;
                   "
                 >
                   <div class="row">
