--- a/index.html
+++ b/index.html
@@ -98,11 +98,14 @@
                     <div class="col-6">
                       <span id="main-temperature"></span>
 
-                      <span id="degree-conversion">
+                      <span id="celsius-link">°C </span>
+
+                      <!-- <span id="degree-conversion">
                         <a href="#" class="active" id="celsius-link">°C</a>
                         |
                         <a href="#" id="fahrenheit-link">°F</a>
-                      </span>
+                      </span> -->
+
                       <ul>
                         <li>Humidity: <span id="humidity"></span>%</li>
                         <li>Wind: <span id="wind"></span> km/h</li>
