Updates URLs (http -> https) to fix mixed content warning

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <div class="row">
                     <div class="col-6">
                       <img
-                        src="http://openweathermap.org/img/wn/03n@2x.png"
+                        src="https://openweathermap.org/img/wn/03n@2x.png"
                         id="icon"
                       />
 
