--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="row">
                   <div class="col-8">
                     <input
-                      type="text"
+                      type="search"
                       placeholder="Enter a city"
                       id="city-input"
                       style="width: 240px"
